--- a/agents-docs/content/docs/visual-builder/status-components.mdx
+++ b/agents-docs/content/docs/visual-builder/status-components.mdx
@@ -8,13 +8,16 @@ The Visual Builder provides powerful tools for configuring status updates across
 
 ## Default Status Updates
 
-By default, status updates provide generic text summaries of what's happening:
+By default, status updates use built-in **default status components** that provide structured labels with contextual details:
 
-- "Searching for information about your query..."
-- "Found 3 relevant documents, analyzing content..."
-- "Preparing detailed response based on findings..."
+- **Label**: User-friendly description like "Searching for information about your query..."
+- **Details**: Structured data with operation context, tool usage, and progress information
 
-These are generated automatically by your graph's summarizer model based on recent agent activity.
+These are generated automatically by your graph's summarizer model and provide richer information than plain text summaries.
+
+### Legacy Plain Text Mode
+
+For simple text-only status updates (legacy behavior), you can explicitly configure an empty `statusComponents` array in your graph settings. However, the default status components are recommended as they provide better user experience and more contextual information.
 
 ## Custom Status Components
 
@@ -76,7 +79,13 @@ Status updates are generated using your graph's configured **summarizer model**,
 1. **Event Tracking**: The system monitors all agent operations (tool calls, transfers, generations)
 2. **Intelligent Triggering**: Updates are sent based on event count or time intervals
 3. **AI Analysis**: The summarizer model analyzes recent events and conversation context
-4. **Output Generation**: Creates either generic text summaries or structured component data
+4. **Output Generation**: Creates structured status updates with labels and contextual details
+
+### Status Update Modes
+
+- **Default Status Components**: Built-in structured format with `label` and `details` fields (recommended)
+- **Custom Status Components**: Your defined schemas for specific data structures
+- **Plain Text Mode**: Simple text summaries (legacy mode, enabled by setting empty `statusComponents` array)
 
 ### Summarizer Model Settings
 
