--- a/agents-docs/content/docs/visual-builder/status-components.mdx
+++ b/agents-docs/content/docs/visual-builder/status-components.mdx
@@ -79,7 +79,7 @@ Status updates are generated using your graph's configured **summarizer model**,
 
 ### Status Update Modes
 
-- **Default Status Components**: Built-in structured format with `label` and `details` fields (recommended)
+- **Default Status Components**: Built-in structured format with `label` and `details` fields
 - **Custom Status Components**: Your defined schemas for specific data structures
 
 ### Summarizer Model Settings
