--- a/agents-docs/content/docs/visual-builder/status-components.mdx
+++ b/agents-docs/content/docs/visual-builder/status-components.mdx
@@ -4,7 +4,7 @@ description: Configure intelligent status updates using structured components in
 icon: "LuClock"
 ---
 
-The Visual Builder provides powerful tools for configuring status updates across your agent graphs. These features keep users informed during long-running operations with either generic text summaries or structured component data.
+The Visual Builder provides powerful tools for configuring status updates across your agent graphs. These features keep users informed during long-running operations with structured component data.
 
 ## Default Status Updates
 
