--- a/agents-docs/content/docs/typescript-sdk/status-updates.mdx
+++ b/agents-docs/content/docs/typescript-sdk/status-updates.mdx
@@ -188,8 +188,7 @@ When no `statusComponents` are configured, the system uses built-in default stat
 
 The default status components are defined in [`packages/agents-sdk/src/default-status-schemas.ts`](https://github.com/inkeep/agents/blob/main/packages/agents-sdk/src/default-status-schemas.ts):
 
-```typescript source="../../packages/agents-sdk/src/default-status-schemas.ts"
-
+```typescript src="../../../packages/agents-sdk/src/default-status-schemas.ts"
 ```
 
 ### Custom Structured Components
