--- a/agents-docs/content/docs/quick-start/sentry.mdx
+++ b/agents-docs/content/docs/quick-start/sentry.mdx
@@ -8,7 +8,7 @@ keywords: Sentry, error tracking, monitoring, distributed tracing
 
 ## Overview
 
-Learn how to add Sentry monitoring to your Inkeep Agent Framework services. S
+Learn how to add Sentry monitoring to your Inkeep Agent Framework services.
 
 ## Step 1:  install sentry
 
@@ -26,7 +26,7 @@ SENTRY_DSN=https://<your-sentry-dsn>@sentry.io/<your-sentry-project>
 
 ## Step 3: Configure Sentry
 
-In `apps/run-api` and `apps/manage-api` create a new file called `instrument.ts` and add the following code:
+In `apps/run-api` and `apps/manage-api` create a new file called `instrument.mjs` and add the following code:
 
 ```typescript
 import * as Sentry from "@sentry/node";
@@ -34,10 +34,8 @@ import * as Sentry from "@sentry/node";
 Sentry.init({
   dsn: process.env.SENTRY_DSN,
   sampleRate: 1.0,
-  tracesSampleRate: 0.0,
+  tracesSampleRate: 1.0,
 });
-
-export default Sentry;
 ```
 
 In `apps/run-api/src/index.ts` and `apps/manage-api/src/index.ts` add the following code to the top of the file before all other imports:
