--- a/agents-docs/content/docs/self-hosting/add-datadog-apm.mdx
+++ b/agents-docs/content/docs/self-hosting/add-datadog-apm.mdx
@@ -2,7 +2,7 @@
 title: Datadog
 sidebarTitle: Datadog
 description: Add Datadog APM to your Inkeep Agent Framework services
-icon: "LuBug"
+icon: "brand/DatadogIcon"
 keywords: Datadog, monitoring, distributed tracing
 ---
 
