--- a/agents-docs/content/docs/self-hosting/add-sentry.mdx
+++ b/agents-docs/content/docs/self-hosting/add-sentry.mdx
@@ -2,7 +2,7 @@
 title: Sentry
 sidebarTitle: Sentry
 description: Add sentry monitoring to your agent services
-icon: "LuBug"
+icon: "brand/SentryIcon"
 keywords: Sentry, error tracking, monitoring, distributed tracing
 ---
 
