--- a/agents-docs/content/docs/community/inkeep-community.mdx
+++ b/agents-docs/content/docs/community/inkeep-community.mdx
@@ -4,6 +4,6 @@ description: The Inkeep Community is a place where you can connect with other In
 icon: "LuUsers"
 ---
 
-From project spotlights to problem-solving and collaboration, our [Slack](https://join.slack.com/t/inkeepworkspace/shared_invite/zt-3cqkl5cup-rcxpLMP0nrjOuJqycC7kiQ) brings the Inkeep community together
+From project spotlights to problem-solving and collaboration, our [Slack](https://inkeep-ai.slack.com/ssb/redirect) brings the Inkeep community together
 
 You can find us on [Inkeep X](https://x.com/inkeep_ai) and [YouTube](https://www.youtube.com/@inkeep-ai).
