--- a/agents-docs/content/docs/quick-start/credentials.mdx
+++ b/agents-docs/content/docs/quick-start/credentials.mdx
@@ -1,8 +1,17 @@
 ---
 title: Credentials
-description: Credentials are used to authenticate MCP servers.
+description: Store your credentials with Nango, an open-source credential store that can be used to authenticate MCP servers.
 icon: "LuKey"
 ---
+
+## Overview
+
+You can set up Nango in two ways:
+
+1. **Cloud Setup**: Use Nango Cloud
+2. **Local Setup**: Run Nango locally using Docker
+
+## Option 1: Nango cloud setup
 
 ### Step 1: Create a Nango account
 
@@ -29,3 +38,44 @@ inkeep dev
 In the visual builder, navigate to the Credentials page in the left sidebar and click "New Credential".
 
 Select "Bearer Authentication" and click "Create Credential". You'll then be prompted to enter your API key.
+
+## Option 2: Nango local setup
+
+### Step 1: Clone the optional services repository
+
+```bash
+git clone https://github.com/inkeep/agents-optional-local-dev
+cd agents-optional-local-dev
+```
+
+### Step 2: Start Nango Services
+
+Inside the `agents-optional-local-dev` repository, run the following command:
+
+```bash
+docker-compose --profile nango up -d
+```
+
+### Step 3: Configure Environment Variables
+
+In your **root project directory** (not inside the `agents-optional-local-dev` repository), update your `.env` file:
+
+```bash
+NANGO_SECRET_KEY=your_nango_secret_key
+NANGO_HOST=http://localhost:3050
+NANGO_CONNECT_BASE_URL=http://localhost:3051
+```
+
+To get your Nango secret key:
+
+1. Open Nango at `http://localhost:3050`
+2. Navigate to Environment Settings and copy the secret key
+
+### Step 4: Verify Setup
+
+1. Restart your Inkeep agents:
+   ```bash
+   pnpm dev
+   ```
+
+2. Create a new credential in the visual builder
