--- a/agents-docs/content/docs/quick-start/start-development.mdx
+++ b/agents-docs/content/docs/quick-start/start-development.mdx
@@ -12,7 +12,7 @@ icon: "LuRocket"
 ### Step 1: Create a new agents project
 
 ```bash
-npx @inkeep/create-agents
+npx @inkeep/create-agents my-agent-directory 
 cd my-agent-directory
 ```
 
