langfuse doc update

--- a/agents-docs/content/docs/quick-start/observability.mdx
+++ b/agents-docs/content/docs/quick-start/observability.mdx
@@ -137,7 +137,5 @@ For more information on how to debug traces, see the [SigNoz Usage guide](/types
 
 ## Additional Observability: Langfuse Integration
 
-If you want to connect to **Langfuse** for specialized LLM observability alongside SigNoz, you'll need to use Docker and the **local method** (Option 2 above). 
-
-👉 **See the [Langfuse Usage guide](/typescript-sdk/langfuse-usage)** for complete setup instructions with Docker.
+👉 **If you want to connect to Langfuse** for specialized LLM observability alongside SigNoz see the [Langfuse Usage guide](/typescript-sdk/langfuse-usage) for complete setup instructions.
 
