--- a/agents-docs/content/docs/self-hosting/add-sentry.mdx
+++ b/agents-docs/content/docs/self-hosting/add-sentry.mdx
@@ -1,6 +1,6 @@
 ---
 title: Sentry
-sidebarTitle: Sentry
+sidebarTitle: Add Sentry
 description: Add sentry monitoring to your agent services
 icon: "brand/SentryIcon"
 keywords: Sentry, error tracking, monitoring, distributed tracing
