--- a/agents-docs/content/docs/self-hosting/add-datadog-apm.mdx
+++ b/agents-docs/content/docs/self-hosting/add-datadog-apm.mdx
@@ -1,6 +1,6 @@
 ---
 title: Datadog
-sidebarTitle: Datadog
+sidebarTitle: Add Datadog
 description: Add Datadog APM to your Inkeep Agent Framework services
 icon: "brand/DatadogIcon"
 keywords: Datadog, monitoring, distributed tracing
