--- a/agents-docs/content/docs/quick-start/start-development.mdx
+++ b/agents-docs/content/docs/quick-start/start-development.mdx
@@ -24,8 +24,15 @@ pnpm dev
 
 The Visual Builder will open automatically at http://localhost:3000.
 
-### Step 3: Chat with your agent
+### Step 3: Push you project
 
-Navigate to the weather graph project that was automatically created, click into the weather graph, and then click the "Try It" button to start chatting with the agent.
+```bash
+cd src/weather-project
+inkeep push
+```
+
+### Step 4: Chat with your agent
+
+Open the Visual Builder at http://localhost:3000, click into the weather graph, and then click the "Try It" button to start chatting with the agent.
 
 Next, we recommend setting up observability to see live traces of your agent. See [Observability](/quick-start/observability) for more information.
