--- a/agents-docs/content/docs/quick-start/start-development.mdx
+++ b/agents-docs/content/docs/quick-start/start-development.mdx
@@ -24,7 +24,9 @@ pnpm dev
 
 The Visual Builder will open automatically at http://localhost:3000.
 
-### Step 3: Push you project
+### Step 3: Push your project
+
+Running this command will push the code you defined your agents and tools with to the Visual Builder.
 
 ```bash
 cd src/weather-project
