--- a/agents-docs/content/docs/quick-start/start-development.mdx
+++ b/agents-docs/content/docs/quick-start/start-development.mdx
@@ -24,7 +24,13 @@ pnpm dev
 
 The Visual Builder will open automatically at http://localhost:3000.
 
-### Step 3: Push your project
+### Step 3: Install the Inkeep CLI
+
+```bash
+npm install -g @inkeep/agents-cli
+```
+
+### Step 4: Push your project
 
 Running this command will push the code you defined your agents and tools with to the Visual Builder.
 
@@ -33,7 +39,7 @@ cd src/weather-project
 inkeep push
 ```
 
-### Step 4: Chat with your agent
+### Step 5: Chat with your agent
 
 Open the Visual Builder at http://localhost:3000, click into the weather graph, and then click the "Try It" button to start chatting with the agent.
 
