--- a/agents-docs/content/docs/quick-start/start-development.mdx
+++ b/agents-docs/content/docs/quick-start/start-development.mdx
@@ -1,6 +1,6 @@
 ---
-title: Start Development
-description: Start developing your agents with the Inkeep Agent Framework
+title: Quick Start
+description: Start developing your agents with the Inkeep Agent Platform
 icon: "LuRocket"    
 ---
 
