--- a/agents-docs/content/docs/visual-builder/mcp-servers.mdx
+++ b/agents-docs/content/docs/visual-builder/mcp-servers.mdx
@@ -99,20 +99,9 @@ If your MCP server requires authentication, you have two options: either use the
   }}
 />
 
-#### Popular MCP servers with OAuth 2.1/PKCE support
+#### 1-click Install MCP servers
 
-| Name                                                                                                             | URL                              |
-| ---------------------------------------------------------------------------------------------------------------- | -------------------------------- |
-| [Atlassian (SSE)](https://support.atlassian.com/rovo/docs/getting-started-with-the-atlassian-remote-mcp-server/) | https://mcp.atlassian.com/v1/sse |
-| [Canva](https://www.canva.dev/docs/connect/canva-mcp-server-setup/)                                              | https://mcp.canva.com/mcp        |
-| [Hugging Face](https://huggingface.co/mcp)                                                                       | https://huggingface.co/mcp?login |
-| [Intercom](https://developers.intercom.com/docs/guides/mcp)                                                      | https://mcp.intercom.com/mcp     |
-| [Linear](https://linear.app/docs/mcp)                                                                            | https://mcp.linear.app/mcp       |
-| [Neon](https://neon.com/docs/ai/neon-mcp-server)                                                                 | https://mcp.neon.tech/mcp        |
-| [Notion](https://developers.notion.com/docs/get-started-with-mcp)                                                | https://mcp.notion.com/mcp       |
-| [Prisma](https://www.prisma.io/docs/postgres/integrations/mcp-server#remote-mcp-server)                          | https://mcp.prisma.io/mcp        |
-| [Sentry](https://docs.sentry.io/product/sentry-mcp/)                                                             | https://mcp.sentry.dev/mcp       |
-| [Vercel](https://vercel.com/docs/mcp/vercel-mcp)                                                                 | https://mcp.vercel.com           |
+<Snippet file="mcp/popular-oauth-servers.mdx" />
 
 ### Manual credential setup
 
