--- a/agents-docs/content/docs/typescript-sdk/tools-and-mcp-servers.mdx
+++ b/agents-docs/content/docs/typescript-sdk/tools-and-mcp-servers.mdx
@@ -6,9 +6,7 @@ icon: "LuHammer"
 
 MCP tools connect to external servers that implement the MCP standard. This allows you to integrate with a wide ecosystem of existing tools and services.
 
-For some tips on leveraging existing MCP server libraries or creating your own MCP server, see [here](typescript-sdk/create-mcp-servers).
-
-Once you have an MCP server, now you can add it to your Agents. 
+<Snippet file="mcp/intro-create-and-add.mdx" />
 
 ### Registring an MCP Server
 
