--- a/agents-docs/content/docs/visual-builder/mcp-servers.mdx
+++ b/agents-docs/content/docs/visual-builder/mcp-servers.mdx
@@ -6,7 +6,9 @@ icon: "LuServer"
 
 MCP servers provide tools that your agents can use to interact with external APIs and services. Once created, these servers are automatically synced to discover available tools, which can then be added to your agent graphs.
 
-## Creating an MCP server
+<Snippet file="mcp/intro-create-and-add.mdx" />
+
+## Register an MCP server
 
 1. Go to the **MCP Servers** tab in the left sidebar, then select "New MCP server".
 
